<resources>
    <string name="app_name">Nieuws</string>
    <string name="news_title">News title</string>
    <string name="this_is_the_news_overview">This is the news overview</string>
    <string name="news_author">News Author</string>
    <string name="strip">-</string>
    <string name="news_source">News Source</string>
    <string name="news_image">News Image</string>
    <string name="no_internet_count">3</string>
</resources>